--- a/Makefile.standalone
+++ b/Makefile.standalone
@@ -6,7 +6,6 @@ KDIR = /usr/src/linux
 DESTDIR =
 TARGET = 
 TARGETS := $(TARGET)
-TARGETMODDIR = "../misc"
 
 default: $(TARGETS)
 
@@ -34,6 +33,9 @@ newhisax: $(TARGETDIR) newhisax_mod
 	$(MAKE) -C $(TARGETDIR) CFLAGS="$(CFLAGS)" MAKING_MODULES=1 modules
 
 ifeq ($(PATCHLEVEL), 2)
+
+TARGETMODDIR = misc
+
 install: install_mod
 
 install_mod: modules_install
@@ -43,6 +45,9 @@ newhisax_mod:
 	mkdir -p modules
 
 else
+
+TARGETMODDIR = ../misc
+
 newhisax_mod:
 	echo patchlevel $(PATCHLEVEL)
 
@@ -55,3 +60,7 @@ $(MODLIB)/$(TARGETMODDIR):
 	mkdir -p $(MODLIB)/$(TARGETMODDIR) 
 
 endif
+
+modlist: $(MODLIB)/$(TARGETMODDIR)
+	$(MAKE) -C $(TARGETDIR) MOD_DESTDIR=$(TARGETMODDIR) mod_list
+
