make changes for 2.5/2.6

--- a/add.config
+++ b/add.config
@@ -1,3 +1,8 @@
-# new mISDN driver as module
-CONFIG_ISDN_DRV_mISDN=m
+#
+# Modular ISDN driver
+#
+CONFIG_MISDN_DRV=m
+CONFIG_MISDN_AVM_FRITZ=y
+CONFIG_MISDN_HFCPCI=y
+CONFIG_MISDN_SPEEDFAX=y
 
