--- a/add.config
+++ b/add.config
@@ -5,5 +5,6 @@ CONFIG_MISDN_DRV=m
 CONFIG_MISDN_AVM_FRITZ=y
 CONFIG_MISDN_HFCPCI=y
 CONFIG_MISDN_SPEEDFAX=y
+CONFIG_MISDN_W6692=y
 CONFIG_MISDN_DSP=y
 
