--- a/drivers/isdn/hardware/mISDN/Makefile.v2.6
+++ b/drivers/isdn/hardware/mISDN/Makefile.v2.6
@@ -42,23 +42,24 @@ endif
 
 # multi objects
 
-sedlfax-objs := sedl_fax.o debug.o helper.o fsm.o isar.o dchannel.o bchannel.o
-avmfritz-objs := avm_fritz.o debug.o helper.o fsm.o dchannel.o bchannel.o
-hfcpci-objs := hfc_pci.o debug.o helper.o dchannel.o bchannel.o
-w6692pci-objs := w6692.o debug.o helper.o dchannel.o bchannel.o
-mISDN_isac-objs := isac.o arcofi.o debug.o
-mISDN_core-objs := core.o stack.o udevice.o helper.o
+sedlfax-objs := sedl_fax.o isar.o
+avmfritz-objs := avm_fritz.o
+hfcpci-objs := hfc_pci.o
+w6692pci-objs := w6692.o
+mISDN_isac-objs := isac.o arcofi.o
+mISDN_core-objs := core.o stack.o udevice.o helper.o debug.o fsm.o \
+			dchannel.o bchannel.o l3helper.o
 ifdef CONFIG_MISDN_MEMDEBUG
 mISDN_core-objs += memdbg.o
 endif
-mISDN_l1-objs := layer1.o helper.o debug.o fsm.o
-mISDN_l2-objs := layer2.o tei.o helper.o debug.o fsm.o
-l3udss1-objs := layer3.o helper.o l3helper.o debug.o fsm.o l3_udss1.o
+mISDN_l1-objs := layer1.o
+mISDN_l2-objs := layer2.o tei.o
+l3udss1-objs := layer3.o l3_udss1.o
 mISDN_capi-objs := capi.o contr.o listen.o appl.o plci.o app_plci.o ncci.o asn1.o \
                    asn1_aoc.o asn1_comp.o asn1_generic.o asn1_diversion.o \
                    asn1_basic_service.o asn1_address.o asn1_enc.o capi_enc.o \
-                   supp_serv.o helper.o l3helper.o debug.o fsm.o
-mISDN_dtmf-objs := dtmf.o helper.o debug.o
-mISDN_dsp-objs := dsp_core.o dsp_cmx.o dsp_tones.o dsp_dtmf.o dsp_audio.o helper.o debug.o
-mISDN_x25dte-objs := x25_dte.o x25_l3.o helper.o debug.o fsm.o
-I4LmISDN-objs := i4l_mISDN.o helper.o l3helper.o debug.o fsm.o
+                   supp_serv.o
+mISDN_dtmf-objs := dtmf.o
+mISDN_dsp-objs := dsp_core.o dsp_cmx.o dsp_tones.o dsp_dtmf.o dsp_audio.o
+mISDN_x25dte-objs := x25_dte.o x25_l3.o
+I4LmISDN-objs := i4l_mISDN.o
