first version of L2/L3 faxservice for CAPI ALPHA !!! - need Sedlbauer Speedfax+ - Sendonly at the moment - only SFF, 1-D MH - Error handling not complete - lot of debug messages

--- a/drivers/isdn/hardware/mISDN/Makefile.v2.6
+++ b/drivers/isdn/hardware/mISDN/Makefile.v2.6
@@ -26,6 +26,7 @@ endif
 
 ifdef CONFIG_MISDN_SPEEDFAX
 obj-$(CONFIG_MISDN_DRV) += sedlfax.o
+obj-$(CONFIG_MISDN_DRV) += faxl3.o
 endif
 
 ifdef CONFIG_MISDN_W6692
