--- a/drivers/isdn/hardware/mISDN/Makefile.v2.6
+++ b/drivers/isdn/hardware/mISDN/Makefile.v2.6
@@ -59,7 +59,8 @@ w6692pci-objs := w6692.o
 hfcmulti-objs := hfc_multi.o
 mISDN_isac-objs := isac.o arcofi.o
 mISDN_core-objs := core.o stack.o udevice.o helper.o debug.o fsm.o \
-			dchannel.o bchannel.o l3helper.o
+			dchannel.o bchannel.o l3helper.o \
+			sysfs_obj.o sysfs_inst.o sysfs_st.o
 ifdef CONFIG_MISDN_MEMDEBUG
 mISDN_core-objs += memdbg.o
 endif
