- common HW layer channel model for B and D channel   * reduce duplicated code   * not finished and tested for all drivers

--- a/drivers/isdn/hardware/mISDN/Makefile.v2.6
+++ b/drivers/isdn/hardware/mISDN/Makefile.v2.6
@@ -69,7 +69,7 @@ hfcmulti-objs := hfc_multi.o
 xhfc-objs := xhfc_su.o xhfc_pci2pi.o
 mISDN_isac-objs := isac.o arcofi.o
 mISDN_core-objs := core.o stack.o udevice.o helper.o debug.o fsm.o \
-			dchannel.o bchannel.o l3helper.o \
+			channel.o l3helper.o \
 			sysfs_obj.o sysfs_inst.o sysfs_st.o
 ifdef CONFIG_MISDN_MEMDEBUG
 mISDN_core-objs += memdbg.o
