--- a/drivers/isdn/hardware/mISDN/Makefile.v2.6
+++ b/drivers/isdn/hardware/mISDN/Makefile.v2.6
@@ -3,7 +3,9 @@
 # EXTRA_CFLAGS += -S -g
 #
 
+ifdef MINCLUDES
 CFLAGS += -I$(MINCLUDES)
+endif
 ifdef CONFIG_MISDN_MEMDEBUG
 	EXTRA_CFLAGS += -DMISDN_MEMDEBUG
 endif
