Work on the LOOP device. Still untested...
Modified Files:
 Tag: mqueue
	mISDN/drivers/isdn/hardware/mISDN/Makefile
	mISDN/drivers/isdn/hardware/mISDN/Makefile.v2.6
	mISDN/drivers/isdn/hardware/mISDN/loop.c
	mISDN/drivers/isdn/hardware/mISDN/loop.h
	mISDN/include/linux/mISDNif.h

--- a/drivers/isdn/hardware/mISDN/Makefile.v2.6
+++ b/drivers/isdn/hardware/mISDN/Makefile.v2.6
@@ -56,6 +56,10 @@ ifdef CONFIG_MISDN_DSP
 obj-$(CONFIG_MISDN_DRV) += mISDN_dsp.o
 endif
 
+ifdef CONFIG_MISDN_LOOP
+obj-$(CONFIG_MISDN_DRV) += mISDN_loop.o
+endif
+
 ifdef CONFIG_I4L_CAPI_LAYER
 obj-$(CONFIG_MISDN_DRV) += I4LmISDN.o
 endif
