added Linux Netdevice support to enable L1 hdlc frame debugging with ethereal, that's just a first shot and doesn't work proper yet. It needs to be compiled in with CONFIG_MISDN_NETDEV.  also modified the misdn-init script to makes it possible to only load a specific driver (for better hotplug support)

--- a/drivers/isdn/hardware/mISDN/Makefile
+++ b/drivers/isdn/hardware/mISDN/Makefile
@@ -77,7 +77,7 @@ xhfc-objs := xhfc_su.o xhfc_pci2pi.o
 mISDN_isac-objs := isac.o arcofi.o
 mISDN_core-objs := core.o stack.o udevice.o helper.o debug.o fsm.o \
 			channel.o l3helper.o \
-			sysfs_obj.o sysfs_inst.o sysfs_st.o
+			sysfs_obj.o sysfs_inst.o sysfs_st.o netdev.o
 ifdef CONFIG_MISDN_MEMDEBUG
 mISDN_core-objs += memdbg.o
 endif
