added the new B410P HFC-4S based card. This card has Echocancelation in hardware. Modified mISDN_dsp to check for hw_echocan facilities. added possibility to control the gain from lower layers. Thanks to Matthew Fredrickson for most of the patches.

--- a/drivers/isdn/hardware/mISDN/Makefile
+++ b/drivers/isdn/hardware/mISDN/Makefile
@@ -4,7 +4,7 @@ EXTRA_CFLAGS += -ggdb
 #
 
 ifdef MINCLUDES
-CFLAGS += -I$(MINCLUDES)
+CFLAGS += -I$(MINCLUDES) -g
 endif
 ifdef CONFIG_MISDN_MEMDEBUG
 	EXTRA_CFLAGS += -DMISDN_MEMDEBUG
