--- a/drivers/isdn/hardware/mISDN/Makefile.v2.6
+++ b/drivers/isdn/hardware/mISDN/Makefile.v2.6
@@ -4,7 +4,7 @@ EXTRA_CFLAGS += -ggdb
 #
 
 ifdef MINCLUDES
-CFLAGS += -I$(MINCLUDES)
+CFLAGS += -I$(MINCLUDES) -g
 endif
 ifdef CONFIG_MISDN_MEMDEBUG
 	EXTRA_CFLAGS += -DMISDN_MEMDEBUG
