added new BN8S+ which has 8 LEDS for each ISDN Port, also added VERSION printing to mISDN_core

--- a/drivers/isdn/hardware/mISDN/Makefile
+++ b/drivers/isdn/hardware/mISDN/Makefile
@@ -14,7 +14,7 @@ ifdef CONFIG_MISDN_NETDEV
 	EXTRA_CFLAGS += -DCONFIG_MISDN_NETDEV 
 endif
 
-
+CFLAGS += -DMISDNVERSION=\"$(MISDNVERSION)\"
 
 obj-$(CONFIG_MISDN_DRV) += mISDN_core.o
 obj-$(CONFIG_MISDN_DRV) += mISDN_isac.o
