--- a/drivers/isdn/hardware/mISDN/Makefile.v2.6
+++ b/drivers/isdn/hardware/mISDN/Makefile.v2.6
@@ -14,7 +14,7 @@ ifdef CONFIG_MISDN_NETDEV
 	EXTRA_CFLAGS += -DCONFIG_MISDN_NETDEV 
 endif
 
-
+CFLAGS += -DMISDNVERSION=\"$(MISDNVERSION)\"
 
 obj-$(CONFIG_MISDN_DRV) += mISDN_core.o
 obj-$(CONFIG_MISDN_DRV) += mISDN_isac.o
