--- a/drivers/isdn/hardware/mISDN/Makefile.v2.6
+++ b/drivers/isdn/hardware/mISDN/Makefile.v2.6
@@ -63,7 +63,7 @@ obj-$(CONFIG_MISDN_DRV) += xhfc.o
 endif
 
 ifdef CONFIG_MISDN_DSP
-obj-$(CONFIG_MISDN_DRV) += mISDN_dsp.o
+obj-$(CONFIG_MISDN_DRV) += mISDN_dsp.o mISDN_dsp_mec2.o mISDN_dsp_kb1ec.o mISDN_dsp_mg2ec.o
 endif
 
 ifdef CONFIG_MISDN_LOOP
@@ -105,7 +105,10 @@ mISDN_capi-objs := capi.o contr.o listen.o appl.o plci.o app_plci.o ncci.o asn1.
                    asn1_basic_service.o asn1_address.o asn1_enc.o capi_enc.o \
                    supp_serv.o
 mISDN_dtmf-objs := dtmf.o
-mISDN_dsp-objs := dsp_core.o dsp_cmx.o dsp_tones.o dsp_dtmf.o dsp_audio.o dsp_blowfish.o dsp_cancel.o
+mISDN_dsp-objs := dsp_core.o dsp_cmx.o dsp_tones.o dsp_dtmf.o dsp_audio.o dsp_blowfish.o dsp_pipeline.o
+mISDN_dsp_mec2-objs := dsp_mec2.o
+mISDN_dsp_kb1ec-objs := dsp_kb1ec.o
+mISDN_dsp_mg2ec-objs := dsp_mg2ec.o
 mISDN_loop-objs := loop.o
 mISDN_x25dte-objs := x25_dte.o x25_l3.o
 I4LmISDN-objs := i4l_mISDN.o
