Adding the octware GPL'ed echo canceller kernel module. To make it work, you will need the octvqed userspace daemon.

--- a/drivers/isdn/hardware/mISDN/Makefile.v2.6
+++ b/drivers/isdn/hardware/mISDN/Makefile.v2.6
@@ -63,7 +63,7 @@ obj-$(CONFIG_MISDN_DRV) += xhfc.o
 endif
 
 ifdef CONFIG_MISDN_DSP
-obj-$(CONFIG_MISDN_DRV) += mISDN_dsp.o mISDN_dsp_mec2.o mISDN_dsp_kb1ec.o mISDN_dsp_mg2ec.o
+obj-$(CONFIG_MISDN_DRV) += mISDN_dsp.o mISDN_dsp_mec2.o mISDN_dsp_kb1ec.o mISDN_dsp_mg2ec.o mISDN_dsp_octwareec.o
 endif
 
 ifdef CONFIG_MISDN_LOOP
@@ -109,6 +109,7 @@ mISDN_dsp-objs := dsp_core.o dsp_cmx.o dsp_tones.o dsp_dtmf.o dsp_audio.o dsp_bl
 mISDN_dsp_mec2-objs := dsp_mec2.o
 mISDN_dsp_kb1ec-objs := dsp_kb1ec.o
 mISDN_dsp_mg2ec-objs := dsp_mg2ec.o
+mISDN_dsp_octwareec-objs := dsp_octwareec.o
 mISDN_loop-objs := loop.o
 mISDN_x25dte-objs := x25_dte.o x25_l3.o
 I4LmISDN-objs := i4l_mISDN.o
